--- a/dashboard/templates/dashboard/size/list.html
+++ b/dashboard/templates/dashboard/size/list.html
@@ -3,14 +3,8 @@
 {% block content %}
 <div class="content-wrapper">
     <div class="content">							
-        <div class="breadcrumb-wrapper">
-        
-        <div>
-            <h1>Product</h1>
-            <a href="{% url 'dashboard:size-create' %}" style="float: right;" type="button" class="mb-1 btn btn-outline-success">Add Size</a>
-           
-        </div>  
-                          
+
+                 
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb p-0">
                 <li class="breadcrumb-item">
@@ -26,32 +20,30 @@
 
             </nav>
             
-
-        </div>
-
-        <div class="row mx-auto">
-            
-            <div class="col-12">
-                <div class="card card-default">
-                    <div class="card-header card-header-border-bottom">
-                        <h2>Sizes List</h2>
-               <div class="col-8 float-right">
-                <div class="card-tools">
-                  <div class="input-group input-group-sm">
+<div class="input-group justify-content-end">
                     <form action="{% url 'dashboard:size-list' %}" method="GET" class="form-inline">
                       <input type="text" name="name" class="form-control float-right searchInput"
                         id="SearchBrand"
                         placeholder="size"
                       />
                       <div class="input-group-append">
-                         <button type="button" class="mb-1 btn btn-success">
+                         <button type="button" class="mb-1 btn btn-secondary">
                           <span class="mdi mdi-magnify"></span>
                         </button>
                       </div>
                     </form>
                   </div>
-                </div>
-            </div>
+
+
+        <div class="row ">
+            
+            <div class="col-12">
+                <div class="card card-default">
+                    <div class="card-header card-header-border-bottom justify-content-between">
+                        <h2>Sizes List</h2>
+                        <a href="{% url 'dashboard:size-create' %}" type="button" class="mb-1 btn btn-outline-primary">Add Size</a>
+
+
                     </div>
                     
                     
@@ -70,13 +62,14 @@
                                     <td scope="row">{{ forloop.counter }}</td>
                                     <td>{{ size.name }}</td>
                                     <td>
-                                        <span><a class="btn btn-warning mr-2"
-                                                href="{% url 'dashboard:size-update' size.pk %}">
-                                              <span class="mdi mdi-circle-edit-outline"></span>Edit</a></span>
-                                         <span><a class="btn btn-outline-danger delete" 
-                                                href="{% url 'dashboard:size-delete' size.pk %}">
-                                                <span class="mdi mdi-trash-can"> Delete</span></a></span
-                        >
+                                    <span>
+                                            <a href="{% url 'dashboard:size-update' size.pk %}" class="btn btn-sm btn-success"><span class ="mdi mr-1 mdi-square-edit-outline">Edit</span></a>
+                                        </span>
+                                        <span>
+                                            <a href="{% url 'dashboard:size-delete' size.pk %}" class="btn btn-sm btn-danger delete"><span class ="mdi mr-1 mdi-trash-can">Delete</span></a>
+                                        </span>
+
+                                      
                                     </td>
                                 </tr>
                                 {% endfor %}
