--- a/dashboard/templates/dashboard/Category/list.html
+++ b/dashboard/templates/dashboard/Category/list.html
@@ -5,8 +5,7 @@
 
     <div class="content-wrapper">
       <div class="content">
-        <div class="breadcrumb-wrapper">
-        <a href="{% url 'dashboard:category-create' %}" style="float: right;" type="button" class="mb-1 btn btn-outline-success">Add Category</a>
+ 
 
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb p-0">
@@ -20,19 +19,7 @@
               
             </ol>
           </nav>
-        
-        </div>
-        
-
-        
-
-    <div class="col-lg-12">
-									<div class="card card-default">
-										<div class="card-header justify-content-between">
-											<h2>CATEGORIES</h2>
-                    <div class="col-8">
-                    <div class="card-tools">
-                      <div class="input-group input-group-sm">
+        <div class="input-group justify-content-end">
                         <form action="{% url 'dashboard:category' %}" method="GET" class="form-inline">
                           <input
                             type="text"
@@ -42,16 +29,30 @@
                             placeholder="Category name"
                           />
                           <div class="input-group-append">
-                            <button type="button" class="mb-1 btn btn-success">
+                            <button type="button" class="btn btn-secondary">
                               <span class="mdi mdi-magnify"></span>
                             </button>
                           </div>
                         </form>
                       </div>
-                    </div>
-                </div>
+  
+        
+
+        
+<div class="row">
+            
+            <div class="col-12">
+                <div class="card card-default">
+                    <div class="card-header card-header-border-bottom justify-content-between">
+											<h2>CATEGORIES</h2>
+                    <a href="{% url 'dashboard:category-create' %}"  type="button" class="mb-1 btn btn-outline-primary">Add Category</a>
+
+                   
+                      
+</div>
+         
                      
-										</div>
+									
 										<div class="card-body">
 											{% comment %} <p class="mb-5">Similar to tables and dark tables, use the modifier classes <code>.thead-light</code> or <code>.thead-dark</code> to make &lt;thead&gt;s appear light or dark gray. Read bootstrap documentation for <a href="http://getbootstrap.com/docs/4.1/content/tables/#table-head-options" target="_blank"> more details.</a></p> {% endcomment %}
 											<table class="table table-hover ">
@@ -74,10 +75,13 @@
 														<td>{{category.description|safe}}</td>
 														<td><img width="100px" height="100px" src="{{ category.img.url }}" alt="" /></td>
                             <td>
-                             <span ><a class="btn btn-outline-success" href="{% url 'dashboard:category-update' category.slug %}"><span class="mdi mdi-circle-edit-outline"> Edit</span></a></span>
-                        <span><a class="btn btn-outline-danger delete" href="{% url 'dashboard:category-delete' category.slug %}"><span class="mdi mdi-trash-can"> Delete</span></a></span>
+                              <span>
+                           <a href="{% url 'dashboard:category-update' category.slug %}" class="btn btn-sm btn-success"> <span class ="mdi mr-1 mdi-square-edit-outline">Edit</span></a>
+                    </span>
+                      <span>
+                    <a  href="{% url 'dashboard:category-delete' category.slug %}"class="btn btn-sm btn-danger delete"><span class ="mdi mr-1 mdi-trash-can">Delete</span></a>
 
-
+</span>
                         
                             
                             </td>
