--- a/dashboard/templates/dashboard/Category/list.html
+++ b/dashboard/templates/dashboard/Category/list.html
@@ -42,7 +42,7 @@
                             placeholder="Category name"
                           />
                           <div class="input-group-append">
-                            <button type="button" class="mb-1 btn btn-success">
+                            <button type="submit" class="mb-1 btn btn-success">
                               <span class="mdi mdi-magnify"></span>
                             </button>
                           </div>
