--- a/dashboard/templates/dashboard/brand/list.html
+++ b/dashboard/templates/dashboard/brand/list.html
@@ -47,7 +47,7 @@
                         placeholder="Brand name"
                       />
                       <div class="input-group-append">
-                         <button type="button" class="mb-1 btn btn-success">
+                         <button type="submit" class="mb-1 btn btn-success">
                           <span class="mdi mdi-magnify"></span>
                         </button>
                       </div>
