--- a/dashboard/templates/dashboard/product/list.html
+++ b/dashboard/templates/dashboard/product/list.html
@@ -58,7 +58,7 @@
                           />
 
                       <div class="input-group-append">
-                        <button type="button" class="mb-1 btn btn-success">
+                        <button type="submit" class="mb-1 btn btn-success">
                           <span class="mdi mdi-magnify"></span>
                         </button>
                       </div>
