--- a/home/templates/home/base/header.html
+++ b/home/templates/home/base/header.html
@@ -298,7 +298,7 @@
                     </li>
                   </ul>
                 </li>
-                <li class="nav-item"> <a class="nav-link" href="contact-us.html">Contact</a>
+                <li class="nav-item"> <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                 </li>
               </ul>
             </div>
