--- a/home/templates/home/base/index.html
+++ b/home/templates/home/base/index.html
@@ -50,50 +50,21 @@
   <div class="container">
     <!-- / .row -->
     <div class="row">
+    {% for service in service %}
       <div class="col-lg-3 col-sm-6">
         <div class="d-flex">
           <div class="mr-2">
-            <i class="las la-truck ic-2x text-primary"></i>
+            <img src="{{ service.image.url }}" height="100px" width="100px"></i>
           </div>
           <div>
-            <h5 class="mb-1">Free Shipping</h5>
-            <p class="mb-0">Writing result-oriented</p>
+            <h5 class="mb-1">{{ service.title }}</h5>
+            <p class="mb-0">{{ service.description }}</p>
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-sm-6 mt-3 mt-sm-0">
-        <div class="d-flex">
-          <div class="mr-2">
-            <i class="las la-hand-holding-usd ic-2x text-primary"></i>
-          </div>
-          <div>
-            <h5 class="mb-1">Money Return</h5>
-            <p class="mb-0">Writing result-oriented</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-sm-6 mt-3 mt-lg-0">
-        <div class="d-flex">
-          <div class="mr-2">
-            <i class="las la-lock ic-2x text-primary"></i>
-          </div>
-          <div>
-            <h5 class="mb-1">Secure Payment</h5>
-            <p class="mb-0">Writing result-oriented</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-sm-6 mt-3 mt-lg-0">
-        <div class="d-flex">
-          <div class="mr-2">
-           <i class="las la-headset ic-2x text-primary"></i>
-          </div>
-          <div>
-            <h5 class="mb-1">24/7 Support</h5>
-            <p class="mb-0">Writing result-oriented</p>
-          </div>
-        </div>
-      </div>
+      
+     {% endfor %}
+    
     </div>
   </div>
 </section>
