--- a/dashboard/templates/dashboard/Category/list.html
+++ b/dashboard/templates/dashboard/Category/list.html
@@ -29,11 +29,7 @@
                             placeholder="Category name"
                           />
                           <div class="input-group-append">
-<<<<<<< HEAD
-                            <button type="submit" class="mb-1 btn btn-success">
-=======
-                            <button type="button" class="btn btn-secondary">
->>>>>>> 333f41975233b1482a275159da154875c9c4a1af
+                            <button type="submit" class="btn btn-secondary">
                               <span class="mdi mdi-magnify"></span>
                             </button>
                           </div>
