--- a/dashboard/templates/dashboard/service/list.html
+++ b/dashboard/templates/dashboard/service/list.html
@@ -3,10 +3,7 @@
 {% block content %}
 <div class="content-wrapper">
     <div class="content">							
-        <div class="breadcrumb-wrapper">
-        
-  
-                          
+                     
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb p-0">
                 <li class="breadcrumb-item">
@@ -17,18 +14,18 @@
                 <li class="breadcrumb-item">
                     Our
                 </li>
-                <li class="breadcrumb-item" aria-current="page">Customers</li>
+                <li class="breadcrumb-item" aria-current="page">Services</li>
                 </ol>
 
             </nav>
-             <div class="input-group input-group-sm justify-content-end">
-                    <form action="{% url 'dashboard:customer-list' %}" method="GET" class="form-inline">
+          <div class="input-group justify-content-end">
+                    <form action="{% url 'dashboard:service-list' %}" method="GET" class="form-inline">
                       <input
                         type="text"
-                        name="username"
+                        name="title"
                         class="form-control float-right searchInput"
-                        id="Searchusername"
-                        placeholder="username"
+                        id="SearchTitle"
+                        placeholder="title"
                       />
                       <div class="input-group-append">
                          <button type="submit" class="mb-1 btn btn-success">
@@ -37,54 +34,42 @@
                       </div>
                     </form>
                   </div>
-
-        </div>
-
-        <div class="row">
+     <div class="row">
             
             <div class="col-12">
                 <div class="card card-default">
                     <div class="card-header card-header-border-bottom justify-content-between">
-                        <h2>Customers List</h2>
-                    <a href="{% url 'dashboard:customer-create' %}"  type="button" class="mb-1 btn btn-outline-primary">Add Customer</a>
+                        <h2>Service List</h2>
+                                    <a href="{% url 'dashboard:service-create' %}" type="button" class="mb-1 btn btn-outline-primary">Add Service</a>
 
-            
-                    </div>
-                    
-                    
+                </div>
+        
                     <div class="card-body">
                         <table class="table table-striped">
                             <thead>
                                 <tr>
                                     <th scope="col">S.N</th>
-                                    <th scope="col">First Name</th>
-                                    <th scope="col">Last Name</th>
-                                    <th scope="col">Username</th>
-                                    <th scope="col">Email</th>
-                                    <th scope="col">Mobile</th>
+                                    <th scope="col">Title</th>
+                                    <th scope="col">Image</th>
+                                    <th scope="col">Description</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for customer in object_list %}
+                                {% for service in object_list %}
                                 <tr>
                                     <td scope="row">{{ forloop.counter }}</td>
-                                    <td>{{ customer.first_name }}</td>
-                                    <td>{{ customer.last_name }}</td>
-                                    <td>{{ customer.username }}</td>
-                                    <td>{{ customer.email }}</td>
-                                    <td>{{ customer.mobile }}</td>
-                                    
+                                    <td>{{ service.title }}</td>
+                                    <td><img src="{{ service.image.url}}" style="width: 20%"/></td>
+                                    <td>{{ service.description }}</td>
                                     <td>
-
- <span>
-                                            <a href="{% url 'dashboard:customer-update' customer.pk %}" class="btn btn-sm btn-success"><span class ="mdi mr-1 mdi-square-edit-outline">Edit</span></a>
+                                    <span>
+                                            <a href="{% url 'dashboard:service-update' service.pk %}" class="btn btn-sm btn-success"><span class ="mdi mr-1 mdi-square-edit-outline">Edit</span></a>
                                         </span>
                                         <span>
-                                            <a href="{% url 'dashboard:customer-delete' customer.pk %}" class="btn btn-sm btn-danger delete"><span class ="mdi mr-1 mdi-trash-can">Delete</span></a>
+                                            <a href="{% url 'dashboard:service-delete' service.pk %}" class="btn btn-sm btn-danger delete"><span class ="mdi mr-1 mdi-trash-can">Delete</span></a>
                                         </span>
-
-                                     
+                                        
                                     </td>
                                 </tr>
                                 {% endfor %}
