messages service contact t

--- a/dashboard/templates/dashboard/message/form.html
+++ b/dashboard/templates/dashboard/message/form.html
@@ -43,7 +43,7 @@
                             <div class="row form-group">
                                 <div class="col-md-6 col-sm-12">
                                     <label for="exampleFormControlInput1">Message</label>
-                                    {{ form.Message }}
+                                    {{ form.message }}
                                 </div>
                             </div>
                             <div class="form-footer pt-4 pt-5 mt-4 border-top">
